# claude_tui_automation

./: CLAUDE.md  __init__.py  automation.py  inbox.py  mcp_inbox.py  proxy.py  pyproject.toml  state.py
tests/: fake_claude.py  mock_api.py  test_automation.py  test_inbox.py  test_mcp_e2e.py  test_mcp_inbox.py  test_proxy.py  test_real_tui.py  test_session.py  test_state.py
