[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-tui-automation"
version = "0.1.0"
description = "Terminal UI automation for Claude Code"
requires-python = ">=3.12"
dependencies = [
    "pyte>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
